remove jQuery and update CSS

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="apple-touch-icon" sizes="72x72" href="/img/launch-icon-72x72.png"/>
     <link rel="apple-touch-icon" sizes="114x114" href="/img/launch-icon-114x114.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link href="/css/ti.css" rel="stylesheet" type="text/css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript" defer></script><script src="/js/responsive.js" type="text/javascript" defer></script>
+    <link href="/css/ti.css" rel="stylesheet" type="text/css" /><script src="/js/responsive.js" type="text/javascript" defer></script>
     <meta name="robots" content="noindex">
-    <script src="/js/category.js" type="text/javascript" defer></script>
     <script type="application/ld+json">
         {"@context":"http://schema.org","@type":"Blog","author":{"@type":"Person","image":{"@type":"ImageObject","height":300,"url":"https://trailimage.com/img/face5_full.jpg","width":300},"name":"Jason Abbott","sameAs":["https://www.facebook.com/jason.e.abbott","http://www.flickr.com/photos/boise","https://www.youtube.com/user/trailimage","https://twitter.com/trailimage"],"url":"https://trailimage.com/about"},"description":"Stories, images and videos of small adventure trips in and around the state of Idaho","mainEntityOfPage":{"@type":"WebPage","id":"https://trailimage.com/"},"name":"Trail Image","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","height":200,"url":"https://trailimage.com/img/logo-large.png","width":200},"name":"Trail Image"},"url":"https://trailimage.com"}
     </script>
@@ -22,8 +20,7 @@
     </style>
     <script type="text/javascript">
         var pageFeatures = {
-            facebook: false,
-            timestamp: 0
+            facebook: false
         };
     </script>
 </head><body>
