--- a/when/index.html
+++ b/when/index.html
@@ -9,8 +9,7 @@
     <link rel="apple-touch-icon" sizes="72x72" href="/img/launch-icon-72x72.png"/>
     <link rel="apple-touch-icon" sizes="114x114" href="/img/launch-icon-114x114.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-    <link href="/css/ti.css" rel="stylesheet" type="text/css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript" defer></script><script src="/js/responsive.js" type="text/javascript" defer></script>
+    <link href="/css/ti.css" rel="stylesheet" type="text/css" /><script src="/js/responsive.js" type="text/javascript" defer></script>
         
     <script type="application/ld+json">
         {"@context":"http://schema.org","@type":"WebPage","breadcrumb":[{"@type":"ListItem","item":{"@type":"Breadcrumb","name":"Home","url":"https://trailimage.com/"},"position":1},{"@type":"ListItem","item":{"@type":"Breadcrumb","name":"When","url":"https://trailimage.com/when"},"position":2}],"name":"When","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","height":200,"url":"https://trailimage.com/img/logo-large.png","width":200},"name":"Trail Image"},"url":"https://trailimage.com/when"}
@@ -21,8 +20,7 @@
     </style>
     <script type="text/javascript">
         var pageFeatures = {
-            facebook: false,
-            timestamp: 0
+            facebook: false
         };
     </script>
 </head><body>
