--- a/brother-ride-2008/index.html
+++ b/brother-ride-2008/index.html
@@ -1,7 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Brother Ride 2008</title>
-        <meta http-equiv="Refresh" content="0; url=/brother-ride-2008/party-on-crater-peak" />
-    </head>
+<!doctype html><html lang=en><title>Brother Ride 2008</title><meta http-equiv=Refresh content="0; url=/brother-ride-2008/party-on-crater-peak">
 </html>
