--- a/photo-tag/H/index.html
+++ b/photo-tag/H/index.html
@@ -1,81 +1,28 @@
-<!DOCTYPE html>
-<html lang="en"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
-   <title>“H” Tags</title><meta name="mobile-web-app-capable" content="yes" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" property="og:description" content="Stories, images and videos of small adventure trips in and around the state of Idaho"/>
-   <link href="/img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
-   <link rel="icon" sizes="114x114" href="/img/launch-icon-114x114.png" />
-   <link rel="apple-touch-icon" href="/img/launch-icon-57x57.png" />
-   <link rel="apple-touch-icon" sizes="72x72" href="/img/launch-icon-72x72.png"/>
-   <link rel="apple-touch-icon" sizes="114x114" href="/img/launch-icon-114x114.png"/>
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-   <link href="/css/ti.css" rel="stylesheet" type="text/css" />
-   <script src="/js/responsive.js" type="text/javascript" defer></script>
-   <style type="text/css">
+<!doctype html><html lang=en><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"><title>“H” Tags</title><meta name=mobile-web-app-capable content=yes><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description property=og:description content="Stories, images and videos of small adventure trips in and around the state of Idaho"><link href=/img/favicon.ico rel="shortcut icon" type=image/vnd.microsoft.icon><link rel=icon sizes=114x114 href=/img/launch-icon-114x114.png><link rel=apple-touch-icon href=/img/launch-icon-57x57.png><link rel=apple-touch-icon sizes=72x72 href=/img/launch-icon-72x72.png><link rel=apple-touch-icon sizes=114x114 href=/img/launch-icon-114x114.png><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link href=/css/ti.css rel=stylesheet type=text/css><script src=/js/responsive.js type=text/javascript defer></script><style type=text/css>
       #bug, #links, #category-menu { position: fixed; }
-   </style>
-   <script type="text/javascript">
+   </style><script type=text/javascript>
       var pageFeatures = { facebook: false };
-   </script>
-</head><body>
-   <header class="page content">
-      <!--googleoff: index-->
-      <nav id="mobile-menu"></nav>
-      <!--googleon: index-->
-      <div id="top-bar">
-         <h1>“H” Tags</h1>
-         <h4>With photo count</h4>
-         <div id="mobile-menu-button"><i class="material-icons menu">menu</i></div>
-      <aside class="site-description">Stories, images and videos of small adventure trips in and around the state of Idaho</aside>
-      </div>
-   </header>
-   <nav id="links">
-      <a href="/" rel="home">Home</a>
-      <a href="/about" rel="author">About</a>
-      <script type="text/javascript">
+   </script></head><header class="page content"><nav id=mobile-menu></nav><div id=top-bar><h1>“H” Tags</h1><h4>With photo count</h4><div id=mobile-menu-button><i class="material-icons menu">menu</i></div><aside class=site-description>Stories, images and videos of small adventure trips in and around the state of Idaho</aside></div></header><nav id=links><a href=/ rel=home>Home</a><a href=/about rel=author>About</a><script type=text/javascript>
          document.write('<n uers="znvygb:pbagnpg@genvyvzntr.pbz">Pbagnpg</n>'.replace(/[a-zA-Z]/g, function(c) { return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));
-      </script>
-      <a href="/photo-tag" rel="search">Photo Tags</a>
-      <a href="/ruminations">Ruminations</a>
-      <a href="/map" rel="home">Map</a>
-   </nav><nav id="category-menu"></nav>
-   <ul id="tags" class="content">
-      <li><a href="../highway/">
-         <div class="label">Highway</div>
-         <div class="count">1</div>
-      </a></li>
-      <li><a href="../hiking/">
-         <div class="label">Hiking</div>
-         <div class="count">3</div>
-      </a></li>
-      <li><a href="../history/">
-         <div class="label">History</div>
-         <div class="count">3</div>
-      </a></li>
-      <li><a href="../honda-crf-230l/">
-         <div class="label">Honda CRF 230L</div>
-         <div class="count">21</div>
-      </a></li>
-      <li><a href="../horse/">
-         <div class="label">Horse</div>
-         <div class="count">2</div>
-      </a></li>
-      <li><a href="../husqvarna-te-450/">
-         <div class="label">Husqvarna TE 450</div>
-         <div class="count">10</div>
-      </a></li>
-   </ul>
-
-   <footer class="page content">
-      <a class="repo" href="https://github.com/trailimage/">
+      </script><a href=/photo-tag rel=search>Photo Tags</a><a href=/ruminations>Ruminations</a><a href=/map rel=home>Map</a></nav><nav id=category-menu></nav><ul id=tags class=content><li><a href=../highway/>
+         <div class=label>Highway</div>
+         <div class=count>1</div>
+      </a><li><a href=../hiking/>
+         <div class=label>Hiking</div>
+         <div class=count>3</div>
+      </a><li><a href=../history/>
+         <div class=label>History</div>
+         <div class=count>3</div>
+      </a><li><a href=../honda-crf-230l/>
+         <div class=label>Honda CRF 230L</div>
+         <div class=count>21</div>
+      </a><li><a href=../horse/>
+         <div class=label>Horse</div>
+         <div class=count>2</div>
+      </a><li><a href=../husqvarna-te-450/>
+         <div class=label>Husqvarna TE 450</div>
+         <div class=count>10</div>
+      </a></ul><footer class="page content"><a class=repo href=https://github.com/trailimage/>
          <span class="icon icon-github-circle"></span>
-         <img src="https://badge.fury.io/gh/Jason-Abbott%2Ftrail-image.svg" width="92" height="20" />
-      </a>
-      <aside>
-         <p class="rights"><strong>Text, images and video are &#169; Copyright 2020 Jason Abbott. All Rights Reserved.</strong></p>
-         <p>Topographic background courtesy of the <a href="http://motoidaho.com/">Idaho Adventure Motorcycling Club</a></p>
-         <p>Maps are &#169; Copyright <a href="https://www.mapbox.com/about/maps/">Mapbox</a> and &#169; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a></p>
-      </aside>
-   </footer>
-</body>
-</html>
+         <img src=https://badge.fury.io/gh/Jason-Abbott%2Ftrail-image.svg width=92 height=20>
+      </a><aside><p class=rights><strong>Text, images and video are © Copyright 2020 Jason Abbott. All Rights Reserved.</strong><p>Topographic background courtesy of the<a href=http://motoidaho.com/>Idaho Adventure Motorcycling Club</a><p>Maps are © Copyright<a href=https://www.mapbox.com/about/maps/>Mapbox</a>and ©<a href=http://www.openstreetmap.org/copyright>OpenStreetMap</a></aside></footer></html>
