--- a/photo-tag/index.html
+++ b/photo-tag/index.html
@@ -1,182 +1,73 @@
-<!DOCTYPE html>
-<html lang="en"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
-   <title>Photo Tags</title><meta name="mobile-web-app-capable" content="yes" />
-   <meta name="viewport" content="width=device-width, initial-scale=1" />
-   <meta name="description" property="og:description" content="Stories, images and videos of small adventure trips in and around the state of Idaho"/>
-   <link href="/img/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon"/>
-   <link rel="icon" sizes="114x114" href="/img/launch-icon-114x114.png" />
-   <link rel="apple-touch-icon" href="/img/launch-icon-57x57.png" />
-   <link rel="apple-touch-icon" sizes="72x72" href="/img/launch-icon-72x72.png"/>
-   <link rel="apple-touch-icon" sizes="114x114" href="/img/launch-icon-114x114.png"/>
-   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
-   <link href="/css/ti.css" rel="stylesheet" type="text/css" />
-   <script src="/js/responsive.js" type="text/javascript" defer></script>
-   <style type="text/css">
+<!doctype html><html lang=en><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#"><title>Photo Tags</title><meta name=mobile-web-app-capable content=yes><meta name=viewport content="width=device-width, initial-scale=1"><meta name=description property=og:description content="Stories, images and videos of small adventure trips in and around the state of Idaho"><link href=/img/favicon.ico rel="shortcut icon" type=image/vnd.microsoft.icon><link rel=icon sizes=114x114 href=/img/launch-icon-114x114.png><link rel=apple-touch-icon href=/img/launch-icon-57x57.png><link rel=apple-touch-icon sizes=72x72 href=/img/launch-icon-72x72.png><link rel=apple-touch-icon sizes=114x114 href=/img/launch-icon-114x114.png><link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel=stylesheet><link href=/css/ti.css rel=stylesheet type=text/css><script src=/js/responsive.js type=text/javascript defer></script><style type=text/css>
       #bug, #links, #category-menu { position: fixed; }
-   </style>
-   <script type="text/javascript">
+   </style><script type=text/javascript>
       var pageFeatures = { facebook: false };
-   </script>
-</head><body>
-   <header class="page content">
-      <!--googleoff: index-->
-      <nav id="mobile-menu"></nav>
-      <!--googleon: index-->
-      <div id="top-bar">
-         <h1>Photo Tags</h1>
-         <div id="mobile-menu-button"><i class="material-icons menu">menu</i></div>
-      <aside class="site-description">Stories, images and videos of small adventure trips in and around the state of Idaho</aside>
-      </div>
-   </header>
-   <nav id="links">
-      <a href="/" rel="home">Home</a>
-      <a href="/about" rel="author">About</a>
-      <script type="text/javascript">
+   </script></head><header class="page content"><nav id=mobile-menu></nav><div id=top-bar><h1>Photo Tags</h1><div id=mobile-menu-button><i class="material-icons menu">menu</i></div><aside class=site-description>Stories, images and videos of small adventure trips in and around the state of Idaho</aside></div></header><nav id=links><a href=/ rel=home>Home</a><a href=/about rel=author>About</a><script type=text/javascript>
          document.write('<n uers="znvygb:pbagnpg@genvyvzntr.pbz">Pbagnpg</n>'.replace(/[a-zA-Z]/g, function(c) { return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);}));
-      </script>
-      <a href="/photo-tag" rel="search">Photo Tags</a>
-      <a href="/ruminations">Ruminations</a>
-      <a href="/map" rel="home">Map</a>
-   </nav><nav id="category-menu"></nav>
-   <ul id="letters" class="content">
-      <li>
-         <a title="View photo tags starting with “A”" href="./A/">
-            <div class="label">A</div>
-            <div class="count">5</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “B”" href="./B/">
-            <div class="label">B</div>
-            <div class="count">13</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “C”" href="./C/">
-            <div class="label">C</div>
-            <div class="count">11</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “D”" href="./D/">
-            <div class="label">D</div>
-            <div class="count">8</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “E”" href="./E/">
-            <div class="label">E</div>
-            <div class="count">1</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “F”" href="./F/">
-            <div class="label">F</div>
-            <div class="count">3</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “G”" href="./G/">
-            <div class="label">G</div>
-            <div class="count">6</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “H”" href="./H/">
-            <div class="label">H</div>
-            <div class="count">6</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “I”" href="./I/">
-            <div class="label">I</div>
-            <div class="count">2</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “J”" href="./J/">
-            <div class="label">J</div>
-            <div class="count">3</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “K”" href="./K/">
-            <div class="label">K</div>
-            <div class="count">3</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “L”" href="./L/">
-            <div class="label">L</div>
-            <div class="count">4</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “M”" href="./M/">
-            <div class="label">M</div>
-            <div class="count">8</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “N”" href="./N/">
-            <div class="label">N</div>
-            <div class="count">2</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “O”" href="./O/">
-            <div class="label">O</div>
-            <div class="count">1</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “P”" href="./P/">
-            <div class="label">P</div>
-            <div class="count">7</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “R”" href="./R/">
-            <div class="label">R</div>
-            <div class="count">8</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “S”" href="./S/">
-            <div class="label">S</div>
-            <div class="count">15</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “T”" href="./T/">
-            <div class="label">T</div>
-            <div class="count">8</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “W”" href="./W/">
-            <div class="label">W</div>
-            <div class="count">2</div>
-         </a>
-      </li>
-      <li>
-         <a title="View photo tags starting with “Y”" href="./Y/">
-            <div class="label">Y</div>
-            <div class="count">1</div>
-         </a>
-      </li>
-   </ul>
-
-   <footer class="page content">
-      <a class="repo" href="https://github.com/trailimage/">
+      </script><a href=/photo-tag rel=search>Photo Tags</a><a href=/ruminations>Ruminations</a><a href=/map rel=home>Map</a></nav><nav id=category-menu></nav><ul id=letters class=content><li><a title="View photo tags starting with “A”" href=./A/>
+            <div class=label>A</div>
+            <div class=count>5</div>
+         </a><li><a title="View photo tags starting with “B”" href=./B/>
+            <div class=label>B</div>
+            <div class=count>13</div>
+         </a><li><a title="View photo tags starting with “C”" href=./C/>
+            <div class=label>C</div>
+            <div class=count>11</div>
+         </a><li><a title="View photo tags starting with “D”" href=./D/>
+            <div class=label>D</div>
+            <div class=count>8</div>
+         </a><li><a title="View photo tags starting with “E”" href=./E/>
+            <div class=label>E</div>
+            <div class=count>1</div>
+         </a><li><a title="View photo tags starting with “F”" href=./F/>
+            <div class=label>F</div>
+            <div class=count>3</div>
+         </a><li><a title="View photo tags starting with “G”" href=./G/>
+            <div class=label>G</div>
+            <div class=count>6</div>
+         </a><li><a title="View photo tags starting with “H”" href=./H/>
+            <div class=label>H</div>
+            <div class=count>6</div>
+         </a><li><a title="View photo tags starting with “I”" href=./I/>
+            <div class=label>I</div>
+            <div class=count>2</div>
+         </a><li><a title="View photo tags starting with “J”" href=./J/>
+            <div class=label>J</div>
+            <div class=count>3</div>
+         </a><li><a title="View photo tags starting with “K”" href=./K/>
+            <div class=label>K</div>
+            <div class=count>3</div>
+         </a><li><a title="View photo tags starting with “L”" href=./L/>
+            <div class=label>L</div>
+            <div class=count>4</div>
+         </a><li><a title="View photo tags starting with “M”" href=./M/>
+            <div class=label>M</div>
+            <div class=count>8</div>
+         </a><li><a title="View photo tags starting with “N”" href=./N/>
+            <div class=label>N</div>
+            <div class=count>2</div>
+         </a><li><a title="View photo tags starting with “O”" href=./O/>
+            <div class=label>O</div>
+            <div class=count>1</div>
+         </a><li><a title="View photo tags starting with “P”" href=./P/>
+            <div class=label>P</div>
+            <div class=count>7</div>
+         </a><li><a title="View photo tags starting with “R”" href=./R/>
+            <div class=label>R</div>
+            <div class=count>8</div>
+         </a><li><a title="View photo tags starting with “S”" href=./S/>
+            <div class=label>S</div>
+            <div class=count>15</div>
+         </a><li><a title="View photo tags starting with “T”" href=./T/>
+            <div class=label>T</div>
+            <div class=count>8</div>
+         </a><li><a title="View photo tags starting with “W”" href=./W/>
+            <div class=label>W</div>
+            <div class=count>2</div>
+         </a><li><a title="View photo tags starting with “Y”" href=./Y/>
+            <div class=label>Y</div>
+            <div class=count>1</div>
+         </a></ul><footer class="page content"><a class=repo href=https://github.com/trailimage/>
          <span class="icon icon-github-circle"></span>
-         <img src="https://badge.fury.io/gh/Jason-Abbott%2Ftrail-image.svg" width="92" height="20" />
-      </a>
-      <aside>
-         <p class="rights"><strong>Text, images and video are &#169; Copyright 2020 Jason Abbott. All Rights Reserved.</strong></p>
-         <p>Topographic background courtesy of the <a href="http://motoidaho.com/">Idaho Adventure Motorcycling Club</a></p>
-         <p>Maps are &#169; Copyright <a href="https://www.mapbox.com/about/maps/">Mapbox</a> and &#169; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a></p>
-      </aside>
-   </footer>
-</body>
-</html>
+         <img src=https://badge.fury.io/gh/Jason-Abbott%2Ftrail-image.svg width=92 height=20>
+      </a><aside><p class=rights><strong>Text, images and video are © Copyright 2020 Jason Abbott. All Rights Reserved.</strong><p>Topographic background courtesy of the<a href=http://motoidaho.com/>Idaho Adventure Motorcycling Club</a><p>Maps are © Copyright<a href=https://www.mapbox.com/about/maps/>Mapbox</a>and ©<a href=http://www.openstreetmap.org/copyright>OpenStreetMap</a></aside></footer></html>
